GtkWindow: Ensure the toplevel is realized before realizing popovers

Otherwise those get a NULL parent window, which is toplevel-y enough
to disembody the popover.

https://bugzilla.gnome.org/show_bug.cgi?id=764060